{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 366,
  "lineage": "ba566939-e182-5620-2c88-715775a7f4d4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "adbfqdn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "hubfirewall",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/azureFirewalls/hubfirewall/applicationRuleCollections/adbcontrolplanefqdn",
            "name": "adbcontrolplanefqdn",
            "priority": 200,
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "databricks-control-plane-services",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "10.179.0.0/23",
                  "10.179.2.0/23"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "dbartifactsprodseap.blob.core.windows.net",
                  "dbartifactsprodeap.blob.core.windows.net",
                  "dblogprodseasia.blob.core.windows.net",
                  "prod-southeastasia-observabilityeventhubs.servicebus.windows.net",
                  "cdnjs.com"
                ]
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.hubfw",
            "azurerm_public_ip.fwpublicip",
            "azurerm_resource_group.this",
            "azurerm_subnet.hubfw",
            "azurerm_subnet.private",
            "azurerm_subnet.public",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "adbfnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "hubfirewall",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/azureFirewalls/hubfirewall/networkRuleCollections/adbcontrolplanenetwork",
            "name": "adbcontrolplanenetwork",
            "priority": 200,
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "40.78.233.2"
                ],
                "destination_fqdns": null,
                "destination_ip_groups": null,
                "destination_ports": [
                  "3306"
                ],
                "name": "databricks-metastore",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "10.179.0.0/23",
                  "10.179.2.0/23"
                ],
                "source_ip_groups": null
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.hubfw",
            "azurerm_public_ip.fwpublicip",
            "azurerm_resource_group.this",
            "azurerm_subnet.hubfw",
            "azurerm_subnet.private",
            "azurerm_subnet.public",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "testvmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkInterfaces/adb-ll73ze-testvm-nic",
            "internal_domain_name_suffix": "yl3ehlaooo0urcclpggllqmcjh.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testvmip",
                "primary": true,
                "private_ip_address": "10.179.6.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/publicIPAddresses/adb-ll73ze-vmpublicip",
                "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-testvmsubnet"
              }
            ],
            "location": "southeastasia",
            "name": "adb-ll73ze-testvm-nic",
            "private_ip_address": "10.179.6.4",
            "private_ip_addresses": [
              "10.179.6.4"
            ],
            "resource_group_name": "adb-dev-adb-ll73ze-rg"
          },
          "dependencies": [
            "azurerm_public_ip.testvmpublicip",
            "azurerm_resource_group.this",
            "azurerm_subnet.testvmsubnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "testvmnsgassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkInterfaces/adb-ll73ze-testvm-nic|/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkSecurityGroups/adb-ll73ze-testvm-nsg",
            "network_interface_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkInterfaces/adb-ll73ze-testvm-nic",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkSecurityGroups/adb-ll73ze-testvm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.testvmnic",
            "azurerm_network_security_group.testvm-nsg",
            "azurerm_public_ip.testvmpublicip",
            "azurerm_resource_group.this",
            "azurerm_subnet.testvmsubnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "testvm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkSecurityGroups/adb-ll73ze-testvm-nsg",
            "location": "southeastasia",
            "name": "adb-ll73ze-testvm-nsg",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "security_rule": [],
            "tags": {
              "Environment": "Testing",
              "Epoch": "ll73ze",
              "Owner": "hao.wang@databricks.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkSecurityGroups/adb-ll73ze-nsg",
            "location": "southeastasia",
            "name": "adb-ll73ze-nsg",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "security_rule": [],
            "tags": {
              "Environment": "Testing",
              "Epoch": "ll73ze",
              "Owner": "hao.wang@databricks.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "aad",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureActiveDirectory",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkSecurityGroups/adb-ll73ze-nsg/securityRules/AllowAAD",
            "name": "AllowAAD",
            "network_security_group_name": "adb-ll73ze-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "azfrontdoor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureFrontDoor.Frontend",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkSecurityGroups/adb-ll73ze-nsg/securityRules/AllowAzureFrontDoor",
            "name": "AllowAzureFrontDoor",
            "network_security_group_name": "adb-ll73ze-nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkSecurityGroups/adb-ll73ze-testvm-nsg/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "adb-ll73ze-testvm-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "119.74.128.46"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.testvm-nsg",
            "azurerm_resource_group.this",
            "data.external.me",
            "data.http.my_public_ip",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fwpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/publicIPAddresses/hubfirewallpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.163.85.62",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "hubfirewallpublicip",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "testvmpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/publicIPAddresses/adb-ll73ze-vmpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.67.95.177",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "adb-ll73ze-vmpublicip",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "adbroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/routeTables/spoke-routetable",
            "location": "southeastasia",
            "name": "spoke-routetable",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "to-firewall",
                "next_hop_in_ip_address": "10.178.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.hubfw",
            "azurerm_public_ip.fwpublicip",
            "azurerm_resource_group.this",
            "azurerm_subnet.hubfw",
            "azurerm_virtual_network.hubvnet",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hubfw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.178.0.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "virtual_network_name": "adb-ll73ze-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.hubvnet",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "plsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.4.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-privatelink",
            "name": "adb-ll73ze-privatelink",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "virtual_network_name": "adb-ll73ze-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.2.0/23"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-private",
            "name": "adb-ll73ze-private",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "virtual_network_name": "adb-ll73ze-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.0.0/23"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-public",
            "name": "adb-ll73ze-public",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "virtual_network_name": "adb-ll73ze-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "testvmsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.6.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-testvmsubnet",
            "name": "adb-ll73ze-testvmsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "virtual_network_name": "adb-ll73ze-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-private",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkSecurityGroups/adb-ll73ze-nsg",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-private"
          },
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.this",
            "azurerm_subnet.private",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-public",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/networkSecurityGroups/adb-ll73ze-nsg",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-public"
          },
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.this",
            "azurerm_subnet.public",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "privateudr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-private",
            "route_table_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/routeTables/spoke-routetable",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-private"
          },
          "dependencies": [
            "azurerm_firewall.hubfw",
            "azurerm_public_ip.fwpublicip",
            "azurerm_resource_group.this",
            "azurerm_route_table.adbroute",
            "azurerm_subnet.hubfw",
            "azurerm_subnet.private",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "publicudr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-public",
            "route_table_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/routeTables/spoke-routetable",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/subnets/adb-ll73ze-public"
          },
          "dependencies": [
            "azurerm_firewall.hubfw",
            "azurerm_public_ip.fwpublicip",
            "azurerm_resource_group.this",
            "azurerm_route_table.adbroute",
            "azurerm_subnet.hubfw",
            "azurerm_subnet.public",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hubvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.178.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f835ba9c-68df-426d-97f7-2a10a5d6015e",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-hub-vnet",
            "location": "southeastasia",
            "name": "adb-ll73ze-hub-vnet",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "tags": {
              "Environment": "Testing",
              "Epoch": "ll73ze",
              "Owner": "hao.wang@databricks.com"
            }
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.179.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ac43fac2-730e-48b5-884b-798cb5c1824f",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet",
            "location": "southeastasia",
            "name": "adb-ll73ze-vnet",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "tags": {
              "Environment": "Testing",
              "Epoch": "ll73ze",
              "Owner": "hao.wang@databricks.com"
            }
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hubvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-hub-vnet/virtualNetworkPeerings/peerhubtospoke",
            "name": "peerhubtospoke",
            "remote_virtual_network_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "adb-ll73ze-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spokevnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-vnet/virtualNetworkPeerings/peerspoketohub",
            "name": "peerspoketohub",
            "remote_virtual_network_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-ll73ze-rg/providers/Microsoft.Network/virtualNetworks/adb-ll73ze-hub-vnet",
            "resource_group_name": "adb-dev-adb-ll73ze-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "adb-ll73ze-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    }
  ]
}